--- a/style.css
+++ b/style.css
@@ -65,10 +65,49 @@ img {
 }
 
 .menu {
+    width: 100%;
     display: grid;
     grid-template-columns: 450px 450px 450px;
     list-style: none;
     justify-content: center;
     gap: 20px;
     margin-top: 50px;
+}
+
+@media (max-width: 1400px) {
+    .menu {
+        grid-template-columns: 1fr 1fr;
+    }
+    img {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media (max-width: 900px) {
+    .menu {
+        grid-template-columns: 1fr;
+    }
+    img {
+        width: 90vw;
+        max-width: 320px;
+        height: auto;
+    }
+    li {
+        font-size: 22px;
+        padding: 12px;
+    }
+    .name,
+    .price {
+        font-size: 20px;
+    }
+    .buttons {
+        flex-direction: column;
+        gap: 16px;
+    }
+    button {
+        width: 90vw;
+        max-width: 250px;
+        margin-top: 15px;
+    }
 }
